Closed
Bug 1364987
Opened 8 years ago
Closed 8 years ago
Crash in mozilla::layers::DisplayportSetListener::DidRefresh
Categories
(Core :: Graphics: WebRender, defect, P5)
Tracking
()
RESOLVED
FIXED
mozilla55
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox53 | --- | unaffected |
firefox54 | --- | unaffected |
firefox55 | --- | fixed |
People
(Reporter: marcia, Assigned: kats)
References
Details
(Keywords: crash, Whiteboard: [gfx-noted])
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-6551f701-aa1e-4456-b99c-20a9f0170514.
=============================================================
Seen while looking at nightly crash data - http://bit.ly/2pPDkTV. Crashes started using 20170502030211.
Possible regression range based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=076a7a66096f9e8d102548397254be32eb26bc3d&tochange=48c0fd9c9ec5d68061ea7b59358874ae8da72572
Assignee | ||
Comment 1•8 years ago
|
||
All of these crashes have "WR! WR+" in the app notes, which means webrender is enabled. But these crashes are in APZ code, which means APZ is also enabled. For now this is an unsupported configuration so I'm going to classify this as a P5 webrender/APZ bug.
Blocks: wr-apz
Component: Panning and Zooming → Graphics: WebRender
Priority: -- → P5
Whiteboard: [gfx-noted]
Comment hidden (mozreview-request) |
Comment 4•8 years ago
|
||
mozreview-review |
Comment on attachment 8868142 [details]
Bug 1364987 - Remove the pref to allow APZ with webrender.
https://reviewboard.mozilla.org/r/139744/#review143072
Attachment #8868142 -
Flags: review?(rhunt) → review+
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2e4d10ec3261
Remove the pref to allow APZ with webrender. r=rhunt
![]() |
||
Comment 6•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Updated•8 years ago
|
status-firefox53:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•