Bug 1364987 - Remove the pref to allow APZ with webrender. r=rhunt

People seem to be turning on this pref in the wild and generating crash reports
which are wasting time and energy of people who have better things to do.

MozReview-Commit-ID: 5VfjKaDluYJ